fix responsiveness on mobile device main content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,8 @@ img {
     width: 90%;
     padding: 0px 10px;
     background-color: #fbeec1;
-    height: 50vh;
+    max-height: 70%;
+    height: 70%;
     box-shadow: 0 0 5px 4px;
     display: flex;
     flex-direction: column;
@@ -84,7 +85,7 @@ img {
     border-radius: 8px;
     text-align: center;
     margin: auto;
-    margin-top: 80px;
+    margin-top: 10%;
 }
 
 .points,
@@ -111,7 +112,7 @@ img {
 
 /* edit question text */
 #questionText p {
-    font-size: 1.2em;
+    font-size: 1.4em;
     font-weight: bold;
 }
 
@@ -169,7 +170,7 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    padding-top: 10px;
+    padding-top: 20px;
 }
 
 .footer-content {
